--- a/.github/workflows/main_tts-app.yml
+++ b/.github/workflows/main_tts-app.yml
@@ -36,6 +36,8 @@ jobs:
         run: poetry run python manage.py collectstatic --noinput
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      -name: Run Pylint
+        run: poetry run invoke lint
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
