--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Python
 *.pyc
 __pycache__/
+**/__pycache__/
 
 # Django
 *.log
@@ -17,6 +18,15 @@ local_settings.py
 venv/
 env/
 .env
+
+# Poetry
+poetry.lock
+
+# Ignore pytest cache
+.pytest_cache/
+
+# Coverage
+/.coverage
 
 # Ignore IDE specific files
 .vscode/
