--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,15 @@ djangorestframework = "^3.15.2"
 psycopg2-binary = "^2.9.9"
 sqlparse = "^0.5.1"
 tzdata = "^2024.2"
-pylint-django = "^2.5.5"
 invoke = "^2.2.0"
+pytest-django = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.1"
+pytest = "^8.3.3"
+pylint-django = "^2.5.5"
+pytz = "^2024.2"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
