--- a/.github/workflows/main_tts-app.yml
+++ b/.github/workflows/main_tts-app.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Install dependencies
         run: poetry install
 
-      - name: Run tests
-        run: poetry run pytest ./api/tests/unit
+      # - name: Run tests
+      #   run: poetry run pytest ./api/tests/unit
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
