--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ env/
 # Uncomment the following line if you want to ignore migrations
 */migrations/*.py
 !*/migrations/__init__.py
+
+# Ignore possibly created audio files
+audio*
