--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ tzdata = "^2024.2"
 invoke = "^2.2.0"
 pytest-django = "^4.9.0"
 whitenoise = "^6.7.0"
+pydub = "^0.25.1"
+azure-cognitiveservices-speech = "^1.40.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.1"
