Test workflow settings

--- a/.github/workflows/main_tts-app.yml
+++ b/.github/workflows/main_tts-app.yml
@@ -5,12 +5,12 @@
 name: CI - HazardHunt
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  #push:
+  #  branches:
+  #    - main
+  #pull_request:
+  #  branches:
+  #    - main
   workflow_dispatch:
 
 jobs:
