--- a/.github/workflows/main_tts-app.yml
+++ b/.github/workflows/main_tts-app.yml
@@ -71,26 +71,26 @@ jobs:
             release.zip
             !venv/
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'tts-app'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CF59C41ADB914CB4909DBC6FE1CBDBE2 }}
+  #deploy:
+  #  runs-on: ubuntu-latest
+  #  needs: build
+  #  environment:
+  #    name: 'Production'
+  #    url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  #  
+  #  steps:
+  #    - name: Download artifact from build job
+  #      uses: actions/download-artifact@v4
+  #      with:
+  #        name: python-app
+#
+  #    - name: Unzip artifact for deployment
+  #      run: unzip release.zip
+#
+  #    - name: 'Deploy to Azure Web App'
+  #      uses: azure/webapps-deploy@v3
+  #      id: deploy-to-webapp
+  #      with:
+  #        app-name: 'tts-app'
+  #        slot-name: 'Production'
+  #        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CF59C41ADB914CB4909DBC6FE1CBDBE2 }}
