--- a/.github/workflows/main_tts-app.yml
+++ b/.github/workflows/main_tts-app.yml
@@ -57,6 +57,8 @@ jobs:
         run: poetry run pytest --cov=api --cov-report=xml
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
