Edit workflow file

--- a/.github/workflows/main_tts-app.yml
+++ b/.github/workflows/main_tts-app.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Install dependencies
         run: poetry install
 
+      # ffmpeg may be needed on some machines for converting audio files to .wav.
+      # Try uncommenting the following, if audio transcription does not work in the cloud.
+#      - name: Install ffmpeg
+#        run: sudo apt-get install ffmpeg
+
       # - name: Run tests
       #   run: poetry run pytest ./api/tests/unit
 
