--- a/.github/workflows/build_main.yml
+++ b/.github/workflows/build_main.yml
@@ -8,10 +8,11 @@ on:
   push:
     branches:
       - main
-      - luo_testit_viewsille
-  #pull_request:
-  #  branches:
-  #    - main
+      - development
+  pull_request:
+    branches:
+      - main
+      - development
   workflow_dispatch:
 
 jobs:
@@ -69,27 +70,3 @@ jobs:
           path: |
             release.zip
             !venv/
-
-  #deploy:
-  #  runs-on: ubuntu-latest
-  #  needs: build
-  #  environment:
-  #    name: 'Production'
-  #    url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-  #  
-  #  steps:
-  #    - name: Download artifact from build job
-  #      uses: actions/download-artifact@v4
-  #      with:
-  #        name: python-app
-#
-  #    - name: Unzip artifact for deployment
-  #      run: unzip release.zip
-#
-  #    - name: 'Deploy to Azure Web App'
-  #      uses: azure/webapps-deploy@v3
-  #      id: deploy-to-webapp
-  #      with:
-  #        app-name: 'tts-app'
-  #        slot-name: 'Production'
-  #        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CF59C41ADB914CB4909DBC6FE1CBDBE2 }}
