--- a/.github/workflows/build_main.yml
+++ b/.github/workflows/build_main.yml
@@ -44,6 +44,10 @@ jobs:
           pip install poetry
       - name: Install dependencies
         run: poetry install
+      - name: Create .env file
+        run: echo "DJANGO_SECRET_KEY=$DJANGO_SECRET_KEY" > .env
+        env:
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
       - name: Wait for PostgreSQL to be ready
         run: |
           until pg_isready -h localhost -p 5432 -U postgres; do
@@ -64,6 +68,8 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Remove .env file
+        run: rm .env
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
