--- a/.github/workflows/build_main.yml
+++ b/.github/workflows/build_main.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Create .env file
-        run: echo "DJANGO_SECRET_KEY=$DJANGO_SECRET_KEY" > .env
+        run: echo "SECRET_KEY=$DJANGO_SECRET_KEY" > .env
         env:
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
       - name: Wait for PostgreSQL to be ready
