--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -1,19 +1,20 @@
-name: CD - HazardHunt
+name: CD-HazardHunt
 
 on:
   workflow_run:
-    workflows: ["CI - HazardHunt"]
+    workflows:
+      - CI-HazardHunt
     types:
       - completed
     branches:
-        - main
+      - main
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     if: >
-      ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push' }}  # Only deploy on successful builds triggered by push events
+      ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event != 'pull_request' }}  # Only deploy on successful builds triggered by push events
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
