--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -20,6 +20,11 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+      - name: List available artifacts
+        run: |
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/Ohtu-Tyoturvallisuus/TTS-backend/actions/runs/${{ github.event.workflow_run.id }}/artifacts
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
