Debug workflow_run id

--- a/.github/workflows/build_main.yml
+++ b/.github/workflows/build_main.yml
@@ -18,6 +18,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: write
+      id-token: write
     services:
       postgres:
         image: postgres
