--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     if: >
       ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event != 'pull_request' }}  # Only deploy on successful builds triggered by push events
+    permissions:
+      contents: read
+      actions: read
+      id-token: write
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -25,10 +29,15 @@ jobs:
           curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/Ohtu-Tyoturvallisuus/TTS-backend/actions/runs/${{ github.event.workflow_run.id }}/artifacts
+
+      - name: Debug run-id
+        run: echo ${{ github.event.workflow_run.id }}
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
+          merge-multiple: true
           repository: Ohtu-Tyoturvallisuus/TTS-backend
           run-id: ${{ github.event.workflow_run.id }}
 
