--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -24,25 +24,23 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: List available artifacts
+      - name: Get artifact ID
         run: |
           curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/Ohtu-Tyoturvallisuus/TTS-backend/actions/runs/${{ github.event.workflow_run.id }}/artifacts
+               -H "Accept: application/vnd.github.v3+json" \
+               https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}/artifacts > artifacts.json
+          cat artifacts.json
+          ARTIFACT_ID=$(jq '.artifacts[] | select(.name=="python-app") | .id' artifacts.json)
+          echo "Artifact ID: $ARTIFACT_ID" >> $GITHUB_ENV
 
-      - name: Debug run-id
-        run: echo ${{ github.event.workflow_run.id }}
-
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-          merge-multiple: true
-          repository: Ohtu-Tyoturvallisuus/TTS-backend
-          run-id: ${{ github.event.workflow_run.id }}
+      - name: Download artifact using GitHub API
+        run: |
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+               -L -o artifact.zip \
+               https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ env.ARTIFACT_ID }}/zip
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip artifact.zip
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
