Make test version for using ffmpeg on azure app service

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -54,8 +54,8 @@ jobs:
 
       # ffmpeg may be needed on some machines for converting audio files to .wav.
       # Try uncommenting the following, if audio transcription does not work in the cloud.
-      - name: Install ffmpeg
-        run: sudo apt-get install ffmpeg
+      # - name: Install ffmpeg
+      #   run: sudo apt-get install ffmpeg
       - name: Run Pylint
         run: poetry run pylint .
 
