Update README and add migrations to project

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -49,17 +49,14 @@ jobs:
             sleep 2
           done
 
-      # Commented out for debugging reasons
-      # - name: Make migrations
-      #   run: poetry run invoke makemigrations
+      # ffmpeg may be needed on some machines for converting audio files to .wav.
+      # Try uncommenting the following, if audio transcription does not work in the cloud.
+      - name: Install ffmpeg
+        run: sudo apt-get install ffmpeg
 
       - name: Run migrations
         run: poetry run invoke migrate
 
-      # ffmpeg may be needed on some machines for converting audio files to .wav.
-      # Try uncommenting the following, if audio transcription does not work in the cloud.
-      # - name: Install ffmpeg
-      #   run: sudo apt-get install ffmpeg
       - name: Run Pylint
         run: poetry run pylint .
 
