--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           echo "SECRET_KEY=$DJANGO_SECRET_KEY" > .env
           echo "SPEECH_KEY=$AZURE_SPEECH_KEY" >> .env
-          echo "SPEECH_REGION=$AZURE_SPEECH_SERVICE_REGION" >> .env
+          echo "SPEECH_SERVICE_REGION=$AZURE_SPEECH_SERVICE_REGION" >> .env
         env:
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
           AZURE_SPEECH_KEY: ${{ secrets.AZURE_SPEECH_KEY }}
