--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ whitenoise = "^6.7.0"
 pydub = "^0.25.1"
 azure-cognitiveservices-speech = "^1.40.0"
 azure-storage-blob = "^12.23.1"
+requests = "^2.32.3"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.1"
