--- a/.github/workflows/uat_tts-app-uat.yml
+++ b/.github/workflows/uat_tts-app-uat.yml
@@ -2,12 +2,12 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - tts-app-uat
+name: CD-HazardHunt-UAT
 
 on:
-  push:
-    branches:
-      - uat
+  #push:
+  #  branches:
+  #    - uat
   workflow_dispatch:
 
 jobs:
@@ -17,20 +17,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python version
+      - name: Set up Python version 3.12
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
+      - name: Install Poetry
+        run: pip install poetry
+    
       - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+        run: poetry install
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -59,7 +55,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
