--- a/.github/workflows/ci-uat.yml
+++ b/.github/workflows/ci-uat.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Create .env file
         run: |
           echo "SECRET_KEY=$DJANGO_SECRET_KEY" > .env
-          echo "SPEECH_KEY=$AZURE_SPEECH_KEY_UAT" >> .env
+          echo "SPEECH_KEY=$AZURE_SPEECH_KEY" >> .env
           echo "SPEECH_SERVICE_REGION=$AZURE_SPEECH_SERVICE_REGION" >> .env
           echo "STORAGE_ACCOUNT_KEY=$AZURE_STORAGE_ACCOUNT_KEY" >> .env
           echo "STORAGE_ACCOUNT_NAME=$AZURE_STORAGE_ACCOUNT_NAME" >> .env
