Add Azure key vault dependencies to poetry, add functionality to settings.py to connect with key vault and retrieve secrets

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ azure-cognitiveservices-speech = "^1.40.0"
 azure-storage-blob = "^12.23.1"
 requests = "^2.32.3"
 pyjwt = "^2.9.0"
+azure-keyvault-secrets = "^4.9.0"
+azure-identity = "^1.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.1"
