--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,12 @@
 [run]
-source = api
-omit = api/**/__init__.py,api/tests/**,api/migrations/**,api/admin.py,api/apps.py,api/urls.py
+source = 
+    api
+    utils
+omit = 
+    **/__init__.py
+    api/tests/**
+    api/migrations/**
+    api/admin.py
+    api/apps.py
+    api/urls.py
+    utils/tests/**
