--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -76,7 +76,7 @@ jobs:
         run: mkdir -p /home/runner/work/TTS-backend/TTS-backend/media
 
       - name: Run unit tests
-        run: poetry run pytest --cov=api --cov-report=xml
+        run: poetry run pytest --cov=api --cov=utils --cov-report=xml
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v4
